--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -11,11 +11,14 @@
     "@oclif/core": "^4",
     "@oclif/plugin-help": "^6",
     "@oclif/plugin-plugins": "^5",
+    "@prisma/internals": "^6.11.1",
     "chalk": "^5.4.1",
     "find-up": "^7.0.0",
     "fs-extra": "^11.3.0",
     "inquirer": "^12.7.0",
-    "ora": "^8.2.0"
+    "ora": "^8.2.0",
+    "ts-morph": "^26.0.0",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/compat": "^1",
@@ -24,7 +27,7 @@
     "@types/chai": "^4",
     "@types/fs-extra": "^11.0.4",
     "@types/mocha": "^10",
-    "@types/node": "^18",
+    "@types/node": "^18.19.118",
     "chai": "^4",
     "eslint": "^9",
     "eslint-config-oclif": "^6",
