--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -11,6 +11,7 @@
     "@oclif/core": "^4",
     "@oclif/plugin-help": "^6",
     "@oclif/plugin-plugins": "^5",
+    "@prisma/client": "^6.12.0",
     "@prisma/internals": "^6.11.1",
     "chalk": "^5.4.1",
     "find-up": "^7.0.0",
