feat(watcher): implement automatic db schema change detection and auto-generate contracts

--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -15,9 +15,11 @@
     "@prisma/internals": "^6.11.1",
     "ai": "^4.3.19",
     "chalk": "^5.4.1",
+    "chokidar": "^4.0.3",
     "find-up": "^7.0.0",
     "fs-extra": "^11.3.0",
     "inquirer": "^12.7.0",
+    "lodash": "^4.17.21",
     "ora": "^8.2.0",
     "ts-morph": "^26.0.0",
     "zod": "^4.0.5"
@@ -28,6 +30,7 @@
     "@oclif/test": "^4",
     "@types/chai": "^4",
     "@types/fs-extra": "^11.0.4",
+    "@types/lodash": "^4.17.20",
     "@types/mocha": "^10",
     "@types/node": "^18.19.118",
     "chai": "^4",
