refactor(migration-refactor): install additional packages to help with the previous refactor of cli into packages/

--- a/packages/generators/sdk/package.json
+++ b/packages/generators/sdk/package.json
@@ -4,8 +4,14 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "type": "module",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "ts-morph": "^26.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^24.2.0",
+    "typescript": "^5.9.2"
   }
 }
