--- a/packages/core/code-generator/package.json
+++ b/packages/core/code-generator/package.json
@@ -4,8 +4,13 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "type": "module",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "ts-morph": "^26.0.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.9.2"
   }
 }
