--- a/packages/core/schema-parser/package.json
+++ b/packages/core/schema-parser/package.json
@@ -1,9 +1,13 @@
 {
   "name": "@living-contracts/schema-parser",
+  "type": "module",
   "version": "0.0.0",
   "description": "",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "src/index.ts",
+  "types": "src/index.ts",
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "@prisma/client": "^6.12.0",
     "@prisma/internals": "^6.11.1"
