--- a/packages/generators/api/package.json
+++ b/packages/generators/api/package.json
@@ -4,9 +4,14 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "type": "module",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "dependencies": {
-    "ts-morph": "^26.0.0",
-    "@prisma/client": "*"
+    "@prisma/client": "*",
+    "ts-morph": "^26.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^24.2.0"
   }
 }
