--- a/packages/generators/docs/package.json
+++ b/packages/generators/docs/package.json
@@ -4,8 +4,14 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "type": "module",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "dependencies": {
+    "@prisma/client": "^6.13.0",
     "ts-morph": "^26.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^24.2.0"
   }
 }
