--- a/packages/core/schema-parser/package.json
+++ b/packages/core/schema-parser/package.json
@@ -9,8 +9,8 @@
     "dist"
   ],
   "dependencies": {
-    "@prisma/client": "^6.12.0",
-    "@prisma/internals": "^6.11.1"
+    "@prisma/internals": "^6.11.1",
+    "@living-contracts/types": "workspace:*"
   },
   "scripts": {
     "build": "tsc"
