--- a/packages/generators/sdk/package.json
+++ b/packages/generators/sdk/package.json
@@ -8,7 +8,7 @@
     "dist"
   ],
   "dependencies": {
-    "ts-morph": "^26.0.0"
+    "@living-contracts/types": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^24.2.0",
