--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -8,6 +8,7 @@
   },
   "bugs": "https://github.com/ArvindParekh/living-contracts/issues",
   "dependencies": {
+    "@living-contracts/ai-inference": "workspace:*",
     "@living-contracts/code-generator": "workspace:*",
     "@living-contracts/generator-api": "workspace:*",
     "@living-contracts/generator-docs": "workspace:*",
@@ -20,6 +21,7 @@
     "@oclif/plugin-plugins": "^5",
     "@prisma/client": "^6.13.0",
     "@prisma/internals": "^6.11.1",
+    "@types/socket.io": "^3.0.2",
     "ai": "^4.3.19",
     "chalk": "^5.4.1",
     "chokidar": "^4.0.3",
@@ -28,6 +30,7 @@
     "inquirer": "^12.7.0",
     "lodash": "^4.17.21",
     "ora": "^8.2.0",
+    "socket.io": "^4.8.1",
     "ts-morph": "^26.0.0",
     "zod": "^4.0.5"
   },
