fix(cli): commonjs issues, fsextra import problems, and incorrect schema parsing logic

--- a/packages/generators/api/tsconfig.json
+++ b/packages/generators/api/tsconfig.json
@@ -1,8 +1,10 @@
 {
   "extends": "../../typescript-config/base.json",
   "compilerOptions": {
-    "outDir": "dist",
-    "rootDir": "src"
+    "rootDir": "./src",
+    "outDir": "./dist"
   },
-  "include": ["src/**/*"]
+  "include": [
+    "src/**/*"
+  ]
 }
