--- a/apps/cli/tsconfig.json
+++ b/apps/cli/tsconfig.json
@@ -6,9 +6,12 @@
     "rootDir": "src",
     "strict": true,
     "target": "es2022",
-    "moduleResolution": "node16"
+    "moduleResolution": "node16",
+    "skipLibCheck": true
   },
-  "include": ["./src/**/*"],
+  "include": [
+    "./src/**/*"
+  ],
   "ts-node": {
     "esm": true
   }
