--- a/packages/ai-inference/package.json
+++ b/packages/ai-inference/package.json
@@ -6,9 +6,10 @@
   "files": [
     "dist"
   ],
-  "main": "src/index.ts",
-  "types": "src/index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
