--- a/packages/core/schema-parser/package.json
+++ b/packages/core/schema-parser/package.json
@@ -3,8 +3,8 @@
   "type": "module",
   "version": "0.0.0",
   "description": "",
-  "main": "src/index.ts",
-  "types": "src/index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
