--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -2,13 +2,11 @@
   "name": "@living-contracts/types",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
-  "types": "src/index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "type": "module",
-  "files": [
-    "dist"
-  ],
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
