--- a/packages/ai-inference/package.json
+++ b/packages/ai-inference/package.json
@@ -21,9 +21,11 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^2.0.74",
+    "@ai-sdk/google": "^2.0.44",
     "@living-contracts/types": "workspace:*",
+    "@types/pg": "^8.15.6",
     "ai": "^5.0.104",
+    "pg": "^8.16.3",
     "zod": "^4.0.14"
   }
 }
