--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -25,6 +25,7 @@
     "ai": "^4.3.19",
     "chalk": "^5.4.1",
     "chokidar": "^4.0.3",
+    "dotenv": "^17.2.3",
     "find-up": "^7.0.0",
     "fs-extra": "^11.3.0",
     "inquirer": "^12.7.0",
